# custodian

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  circle.yml  fabfile.py  jdftxcov.xml  nose.cfg  pylintrc  pyproject.toml  requirements-ci.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  linting.yml  pytest.yml  release.yml  test.yml
custodian/: __init__.py  custodian.py  handlers.py  jobs.py  utils.py
custodian/ansible/: __init__.py  actions.py  intepreter.py  interpreter.py
custodian/cli/: __init__.py  converge_geometry.py  converge_kpoints.py  cstdn.py  run_nwchem.py  run_vasp.py
custodian/cp2k/: __init__.py  handlers.py  interpreter.py  jobs.py  utils.py  validators.py
custodian/feff/: __init__.py  handlers.py  interpreter.py  jobs.py
custodian/gaussian/: __init__.py  handlers.py  jobs.py
custodian/lobster/: __init__.py  handlers.py  jobs.py
custodian/nwchem/: __init__.py  handlers.py  jobs.py
custodian/qchem/: __init__.py  deprecated_handlers.py  deprecated_jobs.py  handlers.py  jobs.py  new_handlers.py  new_jobs.py  utils.py
custodian/tests/: __init__.py  test_custodian.py  test_utils.py
custodian/util/: __init__.py  ioutil.py
custodian/vasp/: __init__.py  handlers.py  interpreter.py  io.py  jobs.py  test_kpoint_bump.ipynb  utils.py  validators.py
docs/: Makefile  _config.yml  changelog.html  changelog.md  changelog.rst  conf.py  custodian.ansible.actions.md  custodian.ansible.html  custodian.ansible.interpreter.md  custodian.ansible.md  custodian.ansible.rst  custodian.cli.converge_geometry.md  custodian.cli.converge_kpoints.md  custodian.cli.cstdn.md  custodian.cli.html  custodian.cli.md  custodian.cli.rst  custodian.cli.run_nwchem.md  custodian.cli.run_vasp.md  custodian.cp2k.handlers.md  custodian.cp2k.html  custodian.cp2k.interpreter.md  custodian.cp2k.jobs.md  custodian.cp2k.md  custodian.cp2k.utils.md  custodian.cp2k.validators.md  custodian.custodian.md  custodian.feff.handlers.md  custodian.feff.html  custodian.feff.interpreter.md  custodian.feff.jobs.md  custodian.feff.md  custodian.gaussian.handlers.md  custodian.gaussian.jobs.md  custodian.gaussian.md  custodian.html  custodian.jdftx.jobs.md  custodian.jdftx.md  custodian.lobster.handlers.md  custodian.lobster.html  (+35 more)
docs/_modules/: index.html
docs/_sources/: custodian.rst.txt  index.rst.txt
docs/_static/: db.json  documentation_options.js
docs/_templates/: layout.html
docs/_themes/: README.html  flask_theme_support.py
docs/doctrees/: changelog.doctree  custodian.ansible.actions.doctree  custodian.ansible.doctree  custodian.ansible.interpreter.doctree  custodian.ansible.tests.doctree  custodian.ansible.tests.test_interpreter.doctree  custodian.cli.converge_geometry.doctree  custodian.cli.converge_kpoints.doctree  custodian.cli.cstdn.doctree  custodian.cli.doctree  custodian.cli.run_nwchem.doctree  custodian.cli.run_vasp.doctree  custodian.cp2k.doctree  custodian.cp2k.handlers.doctree  custodian.cp2k.interpreter.doctree  custodian.cp2k.jobs.doctree  custodian.cp2k.tests.doctree  custodian.cp2k.tests.test_handlers.doctree  custodian.cp2k.tests.test_jobs.doctree  custodian.cp2k.utils.doctree  custodian.cp2k.validators.doctree  custodian.custodian.doctree  custodian.doctree  custodian.feff.doctree  custodian.feff.handlers.doctree  custodian.feff.interpreter.doctree  custodian.feff.jobs.doctree  custodian.feff.tests.doctree  custodian.feff.tests.test_handler.doctree  custodian.feff.tests.test_jobs.doctree  custodian.lobster.doctree  custodian.lobster.handlers.doctree  custodian.lobster.jobs.doctree  custodian.lobster.tests.doctree  custodian.lobster.tests.test_handlers.doctree  custodian.lobster.tests.test_jobs.doctree  custodian.nwchem.doctree  custodian.nwchem.handlers.doctree  custodian.nwchem.jobs.doctree  custodian.nwchem.tests.doctree  (+25 more)
docs/html/: .buildinfo  changelog.html  custodian.ansible.html  custodian.cli.html  custodian.feff.html  custodian.html  custodian.nwchem.html  custodian.qchem.html  custodian.vasp.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_rst/: changelog.rst  conf.py  custodian.ansible.rst  custodian.cli.rst  custodian.cp2k.rst  custodian.feff.rst  custodian.lobster.rst  custodian.nwchem.rst  custodian.qchem.rst  custodian.rst  custodian.vasp.rst  index.rst
docs_rst/_themes/: flask_theme_support.py
scripts/: aflow_run.py  converge_geometry  converge_geometry.py  converge_kpoints  crun_spec  cstdn  custodian_example.py  custodian_examples.py  double_relaxation.py  run_gaussian.py  run_nwchem  run_vasp  run_vasp.py
src/custodian/: __init__.py  custodian.py  utils.py
test_files/: CONTCAR  INCAR  INCAR.gga_ialgo53  INCAR.hybrid_normal  INCAR.ibrion  INCAR.kspacing  INCAR.metagga_all  INCAR.metagga_fast  KPOINTS  POSCAR  POTCAR  std_err.txt.kpoints_trans  vasp.algo_tet  vasp.classrotmat  vasp.dentet  vasp.eddrmm  vasp.fd_ncore  vasp.nbands_not_sufficient  vasp.nicht_konvergent  vasp.posmap  vasp.subspace  vasp6.bravais  vasp6.coef2  vasp6.point_group  vasp6.rhosyg  vasprun.xml  vasprun.xml.indirect
test_files/POT_GGA_PAW_PBE/: POTCAR.Na_pv  POTCAR.Ni_pv
test_files/aliasing/: INCAR  INCAR.orig  vasp.aliasing
test_files/bad_vasprun/: vasprun.xml
test_files/brions/: INCAR  KPOINTS  OUTCAR  POSCAR
test_files/cp2k/: cp2k.inp  cp2k.inp.hybrid.orig  cp2k.inp.orig  cp2k.out.conv  cp2k.out.imprecise  cp2k.out.precondstuck  cp2k.out.test  std_err.txt
test_files/drift/: OUTCAR
test_files/feff_unconverge/: ATOMS  HEADER  PARAMETERS  POTENTIALS  band.inp  compton.inp  custodian.json  eels.inp  feff.inp  ff2x.inp  fms.inp  fort.66  genfmt.inp  global.inp  ldos.inp  opcons.inp  paths.inp  pot.inp  reciprocal.inp  screen.inp  sfconv.inp  xsph.inp
test_files/gaussian/: ferrocene_631G0.gau
test_files/kspacing/: INCAR
test_files/potim/: OUTCAR  (+4 more)
tests/: __init__.py  conftest.py  test_custodian.py  test_utils.py
(+898 files in other folders)
